# sdb

./: .gitignore  CMakeLists.txt  make.sh  readme.md  vcpkg.json
include/libsdb/: bit.hpp  breakpoint_site.hpp  error.hpp  parse.hpp  pipe.hpp  process.hpp  register_info.hpp  registers.hpp  stoppoint_collection.hpp  syscalls.hpp  types.hpp  watchpoint.hpp
include/libsdb/detail/: registers.inc
src/: CMakeLists.txt  breakpoint_site.cpp  disassembler.cpp  pipe.cpp  process.cpp  registers.cpp  syscalls.cpp  watchpoint.cpp
src/include/: syscalls.inc
test/: tests.cpp
test/targets/: CMakeLists.txt  anti_debugger.cpp  hello_sdb.cpp  memory.cpp
tools/: CMakeLists.txt  sdb.cpp
